crates/parsimon-core/src/snapshots/parsimon_core__routing__tests__route_eight_node_works.snap
---
source: crates/parsimon-core/src/routing.rs
expression: hops
---
0:
  0: []
  1:
    - 4
  2:
    - 4
  3:
    - 4
  4:
    - 4
  5:
    - 4
  6:
    - 4
  7:
    - 4
1:
  0:
    - 4
  1: []
  2:
    - 4
  3:
    - 4
  4:
    - 4
  5:
    - 4
  6:
    - 4
  7:
    - 4
2:
  0:
    - 5
  1:
    - 5
  2: []
  3:
    - 5
  4:
    - 5
  5:
    - 5
  6:
    - 5
  7:
    - 5
3:
  0:
    - 5
  1:
    - 5
  2:
    - 5
  3: []
  4:
    - 5
  5:
    - 5
  6:
    - 5
  7:
    - 5
4:
  0:
    - 0
  1:
    - 1
  2:
    - 6
    - 7
  3:
    - 6
    - 7
  4: []
  5:
    - 6
    - 7
  6:
    - 6
  7:
    - 7
5:
  0:
    - 6
    - 7
  1:
    - 6
    - 7
  2:
    - 2
  3:
    - 3
  4:
    - 6
    - 7
  5: []
  6:
    - 6
  7:
    - 7
6:
  0:
    - 4
  1:
    - 4
  2:
    - 5
  3:
    - 5
  4:
    - 4
  5:
    - 5
  6: []
  7:
    - 4
    - 5
7:
  0:
    - 4
  1:
    - 4
  2:
    - 5
  3:
    - 5
  4:
    - 4
  5:
    - 5
  6:
    - 4
    - 5
  7: []

