crates/parsimon-core/src/snapshots/parsimon_core__routing__tests__route_three_node_works.snap
---
source: crates/parsimon-core/src/routing.rs
expression: hops
---
0:
  0: []
  1:
    - 2
  2:
    - 2
1:
  0:
    - 2
  1: []
  2:
    - 2
2:
  0:
    - 0
  1:
    - 1
  2: []

